Solves Infinite Get Request Loop Problem

--- a/views/signUpForm.html
+++ b/views/signUpForm.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/styles.css">
 
 
-<div>
+<div ng-app='HealthDiaryApp' ng-controller="signUpFormController">
   <form novalidate>
     First Name:<br>
     <input type="text" ng-model="user.firstName"><br>
