--- a/views/signUpForm.html
+++ b/views/signUpForm.html
@@ -1,6 +1,6 @@
 
 
-<div ng-app='HealthDiaryApp' ng-controller="signUpFormController">
+<div>
   <form novalidate>
     Username:<br>
     <input type="text" ng-model="user.username"><br>
