--- a/views/mainGraph.html
+++ b/views/mainGraph.html
@@ -1,3 +1,5 @@
+<h2>Here is an example graph tracking an individual's happiness</h2>
 <div class='container center-block' id="exampleGraph">
+
 
 </div>
