--- a/views/userGraph.html
+++ b/views/userGraph.html
@@ -3,12 +3,12 @@
 </div>
 
 <div>
-  <form novalidate>
+  <form novalidate class= 'form-horizontal container well'>
     <br><br> Date for Entry <br>
-    <input type="date" ng-model="entry.date">
+    <input type="date" ng-model="entry.date" class='form-control'>
     <br><br>Input your Happiness!<br>
 
-    <input type="range" ng-model="entry.happiness">
+    <input type="range" ng-model="entry.happiness" class='form-control slider shor noUi-target noUi-ltr noUi-horizontal noUi-connect'>
     <br><br>
 
     <button ng-click="addDataPoint()">add!</button>
